--- a/mask_model_kaggle_dataset.ipynb
+++ b/mask_model_kaggle_dataset.ipynb
@@ -184,7 +184,7 @@
             "    accuracy                           0.99       150\n",
             "   macro avg       0.99      0.99      0.99       150\n",
             "weighted avg       0.99      0.99      0.99       150\n",
-            "\n",
+            "\n There is a saparate Private Repo for this project",
             "[INFO] saving mask detector model...\n"
           ],
           "name": "stdout"
